--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-header {
+.header {
   font-family: verdana;
   font-size: 14px;
   font-weight: bold;
@@ -14,6 +14,7 @@ header {
 .logo {
   color: mediumaquamarine;
   padding-left: 30px;
+  font-size: 14px;
 }
  .nav a {
   justify-content: flex-end;
@@ -28,24 +29,50 @@ header {
   height: 60px;
   margin-right: : 12px;
 }
-
-.lead-story {
+.body {
+  padding-top: 116px;
+  margin-bottom: 78px;
+  margin-left: 398.656
+  width: 1232px;
+  border: 3px solid black;
+  display: flex;
+}
+#column1 {
+  width: 630px;
+  border: 2px solid black;
+  margin-right: 32px;
+  display: flex;
+  flex-direction: column;
+}
+#column2 {
+  width:300px;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  margin-right: 32px;
+}
+#column3 {
+  width: 240px;
+  display: flex;
+  flex-direction: column;
+  border: 2px solid black;
+  margin-right: 32px;
+}
+#lead-story {
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png");
   font-size: 40px;
   text-align: left;
   margin-top: 0;
   width: 630px;
+  height: 300px;
 }
-.image-content{
+#image-content{
   margin-left: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 300px;
   margin-top: 15px;
-  font-family: Georgia;
-  font-weight: bold;
-  color: white;
 }
 h2 {
   font-size: 30px;
@@ -55,4 +82,27 @@ h2 {
   margin-bottom: 0;
   font-style: normal;
   display: block;
+}
+p {
+  font-family: georgia;
+  display: block;
+  font-size: 17px;
+  margin-top: 16px;
+  margin-bottom: 17px;
+}
+div {
+  border: 1px solid black;
+}
+div.fall {
+  display: flex;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png");
+  height: 300px;
+}
+span {
+  font-family: Georgia;
+  font-weight: bold;
+  color: white;
+  font-size: 30px;
+  display: flex
+  justify-content: center;
 }
