--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,7 @@
   z-index: 1;
   width: 100%;
   height: 80px;
+  top: 0;
 }
 .logo {
   color: mediumaquamarine;
@@ -33,14 +34,16 @@
   padding-top: 116px;
   margin-bottom: 78px;
   margin-left: 398.656
-  width: 1232px;
+  width: 1200px;
   display: flex;
+  z-index: 0;
 }
 div#column1 {
   width: 630px;
   margin-right: 32px;
   display: flex;
   flex-direction: column;
+  margin-left: 10px;
 }
 div#column2 {
   width:300px;
@@ -53,6 +56,16 @@ div#column3 {
   display: flex;
   flex-direction: column;
   margin-right: 32px;
+}
+div#column3 .news {
+  font-size: 12px;
+  color: DimGray;
+  font-family: verdana;
+  background-color: WhiteSmoke;
+  border-bottom: 1px solid black;
+  padding: 11px 20px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 #lead-story {
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png");
@@ -78,13 +91,23 @@ h2 {
   margin-bottom: 0;
   font-style: normal;
   display: flex;
+  justify-content: center;
+  align-content: center;
+}
+h3 {
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 41px;
 }
 p {
   font-family: georgia;
-  display: flex;
+  display: block;
   font-size: 17px;
   margin-top: 16px;
   margin-bottom: 16px;
+  flex-shrink: auto;
 }
 div {
 }
@@ -101,6 +124,7 @@ span {
   text-align: center;
   display: flex;
   margin-top: 15px;
+  align-items: center;
 }
 .photo {
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png");
@@ -112,19 +136,50 @@ div.cat {
   height: 300px;
   display: flex;
   margin-top: 15px;
+  width: 300px;
 }
 #story1 {
   display: inline-flex;
   flex-direction: column;
   margin-top: 15px;
   width: 300px;
+  padding-right: 15px;
+  flex-shrink: 2;
 }
 #story2 {
   display: inline-flex;
   flex-direction: column;
   margin-top: 15px;
   width: 300px;
+  flex-shrink: 1;
 }
 .bottom {
   display: flex;
+}
+footer.container {
+  display: flex;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: verdana;
+  font-size: 12px;
+  height: 325px;
+  justify-content: center;
+  align-items: center;
+}
+h1#closing {
+  font-family: georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  padding-right: 25px;
+  border-right: 2px solid white;
+}
+#nav a {
+  justify-content: center;
+  text-decoration: underline;
+  padding-left: 25px;
+}
+footer p {
+  justify-content: center;
+  align-items: center;
 }
